--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="action_settings">Settings</string>
     
     <string name="action_new_channel">New Channel</string>
+    <string name="action_refresh_images">Refresh Images</string>
     
     
     <string name="hello_world">Hello world!</string>
