--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">Picdora</string>
     <string name="action_settings">Settings</string>
     
-    <string name="action_new_channel">New Channel</string>
+    <string name="action_new_channel">Create Channel</string>
     <string name="action_refresh_images">Refresh Images</string>
     
     
