--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,17 +3,16 @@
 
     <string name="app_name">Picdora</string>
     <string name="action_settings">Settings</string>
-    
     <string name="action_new_channel">Create Channel</string>
     <string name="action_refresh_images">Refresh Images</string>
-    
-    
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_channel_creation">New Channel</string>
     <string name="title_activity_channel_selection">Picdora</string>
-
-    
     <string name="drawer_close">Close Drawer</string>
     <string name="drawer_open">Open drawer</string>
+    <string name="title_activity_resume">Resume</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="title_activity_favorites">Favorites</string>
+    <string name="title_activity_likes">Likes</string>
 
 </resources>
