--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,4 +17,13 @@
     <string name="title_activity_likes">Likes</string>
     <string name="title_activity_launch">Picdora</string>
 
+    
+    <!-- Channel Detail -->
+    <string name="action_delete_channel">Delete Channel</string>
+    <string name="action_play_channel">Play Channel</string>
+    <string name="channel_detail_delete_dialog_title">Delete Channel?</string>
+    <string name="channel_detail_delete_dialog_message">Are you sure you want to delete this channel?</string>
+    <string name="channel_detail_delete_dialog_positive">Delete</string>
+    <string name="channel_detail_delete_dialog_negative">Cancel</string>
+    
 </resources>
