--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,5 +25,12 @@
     <string name="channel_detail_delete_dialog_message">Are you sure you want to delete this channel?</string>
     <string name="channel_detail_delete_dialog_positive">Delete</string>
     <string name="channel_detail_delete_dialog_negative">Cancel</string>
+    <string name="channel_detail_gif_setting_title">GIFS:</string>
+    <string name="channel_detail_gif_setting_yes">Yes</string>
+    <string name="channel_detail_gif_setting_no">No</string>
+    <string name="channel_detail_gif_setting_only">Exclusively</string>
+    <string name="channel_detail_low_image_count_warning">Warning, these channel settings only match %1$d images</string>
+    <string name="channel_detail_no_image_count_warning">Warning, these channel settings don\'t match any images</string>
+
     
 </resources>
