--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="dialog_default_positive">Ok</string>
+    <string name="dialog_default_negative">Cancel</string>
 
     <string name="app_name">Picdora</string>
     <string name="action_settings">Settings</string>
@@ -25,12 +27,19 @@
     <string name="channel_detail_delete_dialog_message">Are you sure you want to delete this channel?</string>
     <string name="channel_detail_delete_dialog_positive">Delete</string>
     <string name="channel_detail_delete_dialog_negative">Cancel</string>
-    <string name="channel_detail_gif_setting_title">GIFS:</string>
+    <string name="channel_detail_gif_setting_title">Show GIFs?:</string>
     <string name="channel_detail_gif_setting_yes">Yes</string>
     <string name="channel_detail_gif_setting_no">No</string>
     <string name="channel_detail_gif_setting_only">Exclusively</string>
     <string name="channel_detail_low_image_count_warning">Warning, these channel settings only match %1$d images</string>
     <string name="channel_detail_no_image_count_warning">Warning, these channel settings don\'t match any images</string>
+    <string name="channel_detail_change_name_button">Edit Name</string>
+    <string name="channel_detail_change_categories_button">Categories</string>
+    <string name="channel_detail_created_at">Created: %1$s</string>
+    <string name="channel_detail_last_viewed">Last Viewed: %1$s</string>
+    <string name="channel_detail_images_seen">Images Seen: %1$d</string>
+    <string name="channel_detail_name_dialog_positive">Change Name</string>
+    <string name="channel_detail_name_dialog_title">Change Channel Name</string>
 
     
 </resources>
