--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -61,6 +61,8 @@
     
     <!-- Likes Contextual Menu -->
     <string name="likes_menu_download">Download</string>
+    <string name="likes_menu_star">Add to collection</string>
+    <string name="likes_menu_delete">Delete</string>
 
     
 </resources>
