--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -63,6 +63,10 @@
     <string name="likes_menu_download">Download</string>
     <string name="likes_menu_star">Add to collection</string>
     <string name="likes_menu_delete">Delete</string>
+    
+    <!-- Likes Contextual Menu -->
+    <string name="likes_channel_spinner">Channel Selection</string>
+    <string name="likes_channel_spinner_value_all">All Channels</string>
 
     
 </resources>
