--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -63,6 +63,9 @@
     <string name="gallery_cab_download">Download</string>
     <string name="gallery_cab_all">Select All</string>
     <string name="gallery_cab_delete">Delete</string>
+    <string name="gallery_delete_confirmation_title">Delete Selection?</string>
+    <string name="gallery_delete_confirmation_message">Are you sure you want to delete the selected images?</string>
+    <string name="gallery_delete_confirmation_positive">Delete</string>
     <string name="gallery_cab_share">Share</string>
 
     <!-- Likes Contextual Menu -->
