--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="drawer_open">Open drawer</string>
     <string name="title_activity_resume">Resume</string>
     <string name="title_activity_settings">Settings</string>
-    <string name="title_activity_favorites">Favorites</string>
+    <string name="title_activity_collections">Collections</string>
     <string name="title_activity_likes">Likes</string>
     <string name="title_activity_launch">Picdora</string>
 
