--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -71,6 +71,10 @@
     <string name="gallery_delete_confirmation_message">Are you sure you want to delete the selected images?</string>
     <string name="gallery_delete_confirmation_positive">Delete</string>
     <string name="gallery_cab_share">Share</string>
+    
+    <!-- Selection Fragment -->
+    <string name="selection_cab_all">Select All</string>
+    <string name="selection_cab_delete">Delete</string>
 
     <!-- Likes Contextual Menu -->
     <string name="likes_menu_star">Add to collection</string>
