--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -97,6 +97,9 @@
     <string name="collections_create_dialog_positive">Create</string>
     <string name="collections_create_error_dialog_try_again">Try Again</string>
     <string name="collections_create_error_dialog_title">Error</string>
+    <string name="collections_selection_dialog_positive">New Collection</string>
+    <string name="collections_selection_dialog_title">Choose a collection</string>
     <string name="collection_no_images">You haven\'t added any images to this collection yet!</string>
+    <string name="collections_add_to_collection">Add to collection</string>
 
 </resources>
