--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,6 +22,10 @@
     <string name="title_activity_likes">Likes</string>
     <string name="title_activity_launch">Picdora</string>
 
+    <!-- Channel Selection -->
+    <string name="channel_selection_empty">You don\'t have any channels yet!</string>
+    <string name="channel_create_button">New Channel</string>
+
     <!-- Channel Detail -->
     <string name="action_delete_channel">Delete Channel</string>
     <string name="action_play_channel">Play Channel</string>
@@ -71,7 +75,7 @@
     <string name="gallery_delete_confirmation_message">Are you sure you want to delete the selected images?</string>
     <string name="gallery_delete_confirmation_positive">Delete</string>
     <string name="gallery_cab_share">Share</string>
-    
+
     <!-- Selection Fragment -->
     <string name="selection_cab_all">Select All</string>
     <string name="selection_cab_delete">Delete</string>
@@ -87,7 +91,7 @@
     <!-- Likes Menu -->
     <string name="likes_channel_spinner">Channel Selection</string>
     <string name="likes_channel_spinner_value_all">All Channels</string>
-    
+
     <!-- Collections -->
     <string name="action_new_collection">Create Collection</string>
     <string name="collections_button_create_new">Create Collection</string>
