--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <!-- Picdora Dialog -->
-    <string name="dialog_default_positive">Ok</string>
+    <string name="dialog_default_positive">OK</string>
     <string name="dialog_default_negative">Cancel</string>
     <string name="dialog_default_title">Alert</string>
     <string name="dialog_default_message">Alert message</string>
@@ -13,14 +13,12 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_channel_creation">New Channel</string>
     <string name="title_activity_channel_detail">Channel</string>
-    <string name="title_activity_channel_selection">Channels</string>
+    <string name="title_activity_channel_selection">Picdora</string>
     <string name="drawer_close">Close Drawer</string>
     <string name="drawer_open">Open drawer</string>
-    <string name="title_activity_resume">Resume</string>
     <string name="title_activity_settings">Settings</string>
     <string name="title_activity_collections">Collections</string>
     <string name="title_activity_likes">Likes</string>
-    <string name="title_activity_launch">Picdora</string>
 
     <!-- Channel Selection -->
     <string name="channel_selection_empty">You don\'t have any channels yet!</string>
